--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
 ...
         </div>
     </div>
+
+<!-- AddThis Button BEGIN -->
+ <div class="container share-section">
+<div class="addthis_toolbox addthis_default_style">
+<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+<a class="addthis_button_tweet"></a>
+<a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal"></a>
+<a class="addthis_counter addthis_pill_style"></a>
+</div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-527b1a916f20c894"></script>
+  </div>
+<!-- AddThis Button END -->
 </body>
 
   <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
