Add reload button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="container in-progress"><img src="http://preloaders.net/preloaders/484/Instagram%20loading.gif" class="loading"> 處理中... (約須兩年)</div>
 <div class="container generated">
-  <div class="result">結果: 不獲批准。
+  <div class="result">結果: 不獲批准。 <a href="#" class="reload">再一次申請</a>
   </div>
    <div class="result-img">&nbsp;
   </div>
