Add application image

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <title>模擬業務申請</title>
 <body>
 <div class="container panel">
+  <div class="application-img"></div>
   <h4>模擬業務申請</h4>
   <h3>請輸入打算申請業務及其資料</h3>
   <div><label>致:</label> <input class="org" type="text" name="org" placeholder="行會"/></div>
