Update submit button text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div><label>  讓更多人能夠</label> <input class="action" type="text" name="action" placeholder="收看"/></div>
   <div><label>更優質的</label> <input class="product" type="text" name="product" placeholder="電視節目"/></div>
-  <div><input type="submit" class="generate"></div>
+  <div><input type="submit" class="generate" value="遞交"></div>
 </div>  
 
   <div class="container in-progress"><img src="http://preloaders.net/preloaders/484/Instagram%20loading.gif" class="loading"> 處理中... (約須兩年)</div>
